--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "eslint-config-react-app": "^6.0.0"
   }
 }
