--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "intersection-observer": "^0.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.13.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-components-breakpoint": "^3.0.0-preview.20"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
