--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.13.0",
     "styled-components": "^5.2.1",
     "styled-components-breakpoint": "^3.0.0-preview.20"
