--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-json": "^3.0.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "intersection-observer": "^0.12.0",
     "prop-types": "^15.7.2",
@@ -36,6 +37,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.13.0",
+    "react-intersection-observer": "^8.31.0",
     "styled-components": "^5.2.1",
     "styled-components-breakpoint": "^3.0.0-preview.20"
   },
