--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
@@ -21,14 +22,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^2.32.3",
+    "gatsby": "^2.32.9",
     "gatsby-background-image": "^1.4.1",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
-    "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^3.10.0",
-    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-json": "^3.0.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "intersection-observer": "^0.12.0",
@@ -50,6 +51,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.1.0"
   }
 }
