--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
+    "build:production": "gatsby clean && gatsby build --prefix-paths",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "npm run build:production && gh-pages -d public"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
