--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
   "plugins": ["react"],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
-    "no-unused-expressions": [2, { "allowShortCircuit": true }]
+    "no-unused-expressions": [2, { "allowShortCircuit": true }],
+    "react/function-component-definition": "off"
   },
   "settings": {
     "import/resolver": {
