--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "portfolio",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "description": "Portfolio",
-  "keywords": [
-    "gatsby"
-  ],
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
@@ -25,6 +22,7 @@
     "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^5.14.1",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
