--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     "node": ">=22"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "babel-plugin-styled-components": "^2.0.2",
+    "@fortawesome/fontawesome-free": "6.7.2",
+    "@fortawesome/fontawesome-svg-core": "6.7.2",
+    "@fortawesome/free-brands-svg-icons": "6.7.2",
+    "@fortawesome/free-regular-svg-icons": "6.7.2",
+    "@fortawesome/free-solid-svg-icons": "6.7.2",
+    "@fortawesome/react-fontawesome": "0.2.2",
+    "babel-plugin-styled-components": "2.1.4",
     "gatsby": "^5.14.1",
-    "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
     "gatsby-plugin-sharp": "^5.14.0",
@@ -34,16 +33,15 @@
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-json": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
-    "intersection-observer": "^0.12.0",
-    "node-fetch": "^3.1.1",
+    "intersection-observer": "^0.12.2",
+    "node-fetch": "^3.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
-    "react-intersection-observer": "^8.33.1",
-    "remark-parse": "^10.0.1",
-    "styled-components": "^5.3.3",
-    "trim": "^0.0.3"
+    "react-intersection-observer": "9.16.0",
+    "remark-parse": "11.0.0",
+    "styled-components": "6.1.16"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
