--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "alert": true
   },
   "rules": {
+    "max-len": ["error", { "code": 80 }],
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
     "no-unused-expressions": [2, { "allowShortCircuit": true }],
     "react/function-component-definition": "off",
