--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "9.16.0",
     "remark-parse": "11.0.0",
-    "styled-components": "6.1.17"
+    "styled-components": "6.1.17",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.11",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
