--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "build:production": "gatsby clean && gatsby build --prefix-paths",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "lint": "eslint .",
+    "lint:fix": "npm run lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "deploy": "npm run build:production && gh-pages -d public"
   },
+  "type": "module",
   "engines": {
     "node": ">=22"
   },
@@ -45,17 +50,17 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@types/react-helmet": "^6.1.11",
     "@types/styled-components": "^5.1.34",
-    "eslint": "^8.7.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^7.0.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^6.3.0"
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "gh-pages": "^6.3.0",
+    "prettier": "^3.5.3"
   }
 }
